2006-08-08  John Peacock <jpeacock@cpan.org>

	Revert accidental whitespace change

2006-08-08  John Peacock <jpeacock@cpan.org>

	One more regex to prevent patch files being added to MANIFEST

2006-08-08  John Peacock <jpeacock@cpan.org>

	Dependency on changelog not in correct order with dist

2006-08-08  John Peacock <jpeacock@cpan.org>

	Yet another way to structure Makefile.PL so that it autogenerates Changes.

2006-08-08  John Peacock <jpeacock@cpan.org>

	Once again, fix very small version handling in pure Perl release (globally
	this time).

2006-07-30  John Peacock <jpeacock@cpan.org>

	Property change (don't need these to be executable).

2006-07-30  John Peacock <jpeacock@cpan.org>

	Add MANIFEST.SKIP so Module::Release will be happy.
	Hide vutil/Makefile.PL inside top level Makefile.PL (__DATA__).

2006-07-30  John Peacock <jpeacock@cpan.org>

	Force MSVC to only compile, not link, by default.
	Generate manified PODs in Makefile.PL.
	Autogenerate 'Changes' from Makefile.PL.

2006-07-25  John Peacock <jpeacock@cpan.org>

	Pure Perl UNIVERSAL::VERSION was throwing undef warnings when called
	without a req, e.g. MODULE->VERSION.

2006-07-25  John Peacock <jpeacock@cpan.org>

	More compatibility for inclusion in Module::Build.
	Remove dependency to Scalar::Util (just guess if it is a v-string).

2006-07-19  John Peacock <jpeacock@cpan.org>

	More Makefile tweakage.  Can't use warnings in Perl < v5.6.0 and need to
	protect Build.PL from being run by Makefile.PL being a little too helpful.

2006-07-17  John Peacock <jpeacock@cpan.org>

	Custom Makefile.PL left debris around if ExtUtils::CBuilder, confusing the
	Makefile into trying to compile/link something that wasn't there.

	Also, take out the "0+" numification, which didn't work in vpp.pm, and which
	I don't want to support with this module anyway.

2006-07-17  John Peacock <jpeacock@cpan.org>

	Reorganize structure and provide a fully EU::MM compatible Makefile.PL