@@ -1,3 +1,8 @@
+2006-08-16  John Peacock <jpeacock@cpan.org>
+
+	Use default subclass name in Build.PL, since M::B nukes the version::
+	namespace during its own initialization.
+
 2006-08-08  John Peacock <jpeacock@cpan.org>
 
 	Revert accidental whitespace change
